[gd_scene load_steps=4 format=2]

[ext_resource path="res://Card/open_cards.tscn" type="PackedScene" id=1]
[ext_resource path="res://Card/open_cards_test.gd" type="Script" id=2]
[ext_resource path="res://Card/card.tscn" type="PackedScene" id=3]

[node name="open_cards_test" type="Spatial"]
script = ExtResource( 2 )

[node name="open_cards" parent="." instance=ExtResource( 1 )]
max_scale_size = 4.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, 3.58839e-08, 0.410464, 0.911877, 7.97188e-08, 0.911877, -0.410464, 0, 3.53028, -0.837467 )
size = 2.42

[node name="Node" type="Node" parent="."]

[node name="card1" parent="." instance=ExtResource( 3 )]

[node name="card2" parent="." instance=ExtResource( 3 )]

[node name="card3" parent="." instance=ExtResource( 3 )]

[node name="card4" parent="." instance=ExtResource( 3 )]

[connection signal="card_left_click" from="open_cards" to="." method="_on_open_cards_card_left_click"]
[connection signal="card_right_click" from="open_cards" to="." method="_on_open_cards_card_right_click"]
